# model_packing_and_shipping

./: .gitignore  README.org  dagger.json  pyproject.toml
apis/jax_iris/: README.md  pyproject.toml
apis/jax_iris/src/jax_iris/: __init__.py  japp.py
development/ci/src/: main.py
development/infra/: app.py
development/infra/mpas_infra/: mpas_infra_stack.py
development/infra/tests/unit/: test_mpas_infra_stack.py
development/notebooks/: hello.ipynb  jax_iris.ipynb  tensorflow.ipynb  tiny_model.keras
development/notebooks/.ipynb_checkpoints/: hello-checkpoint.ipynb  tensorflow_iris-checkpoint.ipynb
mpas/: __init__.py
training/jax_iris_model/: README.md  pyproject.toml
training/jax_iris_model/src/jax_iris_model/: __init__.py  data.py  jax_iris.py  model.py  predict.py
